# nrf52-lcd-tester-fw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  instructions.md  jlink.jlink  lv_conf.h
reference/: CMakeLists.txt
src/: display.c  main.c  spi.c  syscalls.c
src/config/: pinout.h  sdk_config.h
src/images/: CMakeLists.txt
src/include/: display.h  spi.h
